--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -13,6 +13,8 @@ paperless_ngx_jbig2enc_enabled: true
 paperless_ngx_jbig2enc_lossy: false
 paperless_ngx_dependency_install_tmp_dir: "/tmp/"
 paperless_ngx_jbig2enc_version: 0.29
+## Python dependencies
+paperless_ngx_venv_package: python3-venv
 ## Redis db
 paperless_ngx_redis_host: localhost
 paperless_ngx_redis_port: 6379
