--- a/tasks/base_dependencies/repo_packages.yml
+++ b/tasks/base_dependencies/repo_packages.yml
@@ -13,14 +13,12 @@
     update_cache: true
     pkg:
       # paperless-ngx
-      - default-libmysqlclient-dev
       - fonts-liberation
       - imagemagick
       - optipng
       - gnupg
       - libpq-dev
       - libmagic-dev
-      - mariadb-client
       - mime-support
       - libzbar0
       - poppler-utils
@@ -44,6 +42,14 @@
     - "not 'Temporary failure resolving' in _install_base_deps_result.stderr|default('')"
   retries: 3
   delay: 60
+
+- name: Install mysql dependencies
+  become: true
+  ansible.builtin.apt:
+    pkg:
+      - default-libmysqlclient-dev
+      - mariadb-client
+  when: paperless_ngx_db_type == 'mariadb'
 
 - name: Install ocr languages
   become: true
