--- a/tasks/base_dependencies/repo_packages.yml
+++ b/tasks/base_dependencies/repo_packages.yml
@@ -17,7 +17,6 @@
       - imagemagick
       - optipng
       - gnupg
-      - libpq-dev
       - libmagic-dev
       - mime-support
       - libzbar0
@@ -50,6 +49,12 @@
       - default-libmysqlclient-dev
       - mariadb-client
   when: paperless_ngx_db_type == 'mariadb'
+
+- name: Install postgresql dependencies
+  become: true
+  ansible.builtin.apt:
+    pkg: libpq-dev
+  when: paperless_ngx_db_type == 'postgresql'
 
 - name: Install ocr languages
   become: true
